=================
Changes for Crate
=================

Unreleased
==========

 - Added ``char_length``, ``bit_length`` and ``octet_length`` scalar
   functions.

 - The ``jobs.keep_alive_timeout`` value can now be configured and the default has been
   changed to 0 (deactivated) from ``5m``

 - Allow creating the CrateClient with settings and servers at the same time

 - Expose shard recovery information in sys.shards table

 - Expose relocating shards in sys.shards table
   Note that relocating shards are shown additionally to their already assigned
   source shards.

 - Removed the limitation that all selected columns must also appear in the
   ORDER BY clause for joins.

 - Added support for explicit INNER JOIN .. ON syntax.

 - added os and jvm infos to sys.nodes table

 - sort columns in ``sys`` and `` information_schema`` tables
   alphabetically when selecting all columns with ``*``

2015/12/02 0.53.1
=================

 - Updated Crash to 0.14.3, which includes the following change:

   - Python2.6/2.7 output now prints unicode strings correctly when using
     csv output format

 - Improved the speed of group by queries which contain tables with more
   than 1 shard per node.

 - Updated crate-admin to 0.16.1 which includes following changes:

   - fix: column headers where not shown in result table on console page
     when two or more columns with the same name were selected

 - Fix: insert into a partitioned primary key column of type long
   could fail under some circumstances

 - Fix: missing characters when concatenating string under some
   rare circumstances

 - Internal optimization: Avoid writing partition values to the source.

 - Updated crate certificates in the ssl truststore.

 - Fixed an issue that could cause bulk update requests to fail if the
   ``bulkArgs`` contained only one item

2015/11/16 0.53.0
=================

 - Updated crate-admin to 0.16.0 which includes following changes:
